--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+<script>
+grecaptcha.ready(function() {
+    grecaptcha.execute('6LcNJMYUAAAAAC0y9fEVN3DI-5uD8iSvydiOKxCf', {action: 'homepage'}).then(function(token) {
+       
+    });
+});
+</script>
   </body>
 </html>
+
